--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
 
   cupertino_icons: ^0.1.2
   #TODO: Add your dependencies here.
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
